--- a/charts/renovate/Chart.yaml
+++ b/charts/renovate/Chart.yaml
@@ -4,7 +4,7 @@ description: Universal dependency update tool that fits into your workflows.
 name: renovate
 version: '23.35.5'
 icon: https://docs.renovatebot.com/assets/images/logo.png
-home: https://github.com/renovatebot/renovate
+home: https://gazza7205.github.io/helm-charts/
 keywords:
   - automated
   - dependencies
@@ -12,6 +12,6 @@ keywords:
   - management
   - update
 sources:
-  - https://github.com/renovatebot/renovate
+  - https://gazza7205.github.io/helm-charts/
 maintainers:
   - name: JamieMagee
