--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,6 @@ jobs:
         with:
           version: v3.4.0
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@master
+        uses: helm/chart-releaser-action@v1.0.0
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
